# VL_uBMK

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/bitonic/: CMakeLists.txt  bitonic.cpp  boost.cpp  seq.cpp  utils.cpp  utils.hpp  vl.cpp  zmq.cpp
apps/echo/: CMakeLists.txt  echo.cpp
apps/ember/: CMakeLists.txt  ember.cpp
apps/fir/: CMakeLists.txt  fir.cpp
apps/fluidanimate/: CMakeLists.txt  main.cpp  raftlib_src.cpp  raftlib_src.hpp
apps/latency/: CMakeLists.txt  latency.c
apps/lockhammer/: CMakeLists.txt  lockhammer.c
apps/lockhammer/include/: atomics.h  boost_lock.h  lockhammer.h  perf_timer.h  vlink_lock.h  zmq_lock.h
apps/max_sce/: CMakeLists.txt  max_sce.c
apps/network/: CMakeLists.txt  firewall.cpp  pipeline.cpp  utils.hpp
apps/phish/: CMakeLists.txt  examples.cpp
apps/phish/minnow/: CMakeLists.txt  count.cpp  file2words.cpp  filegen.cpp  print.cpp  sort.cpp
apps/pingpong/: CMakeLists.txt  pingpong.cpp
apps/search/: CMakeLists.txt  bmh.cpp
apps/shopping/: CMakeLists.txt  shopping.c
apps/shuffler/: CMakeLists.txt  shuffler.cpp
apps/stream/: CMakeLists.txt  stream.c
cmake/: FindGccAtomic.cmake  FindNuma.cmake  FindPAPI.cmake  FindQThread.cmake  FindRaftLib.cmake  FindVL.cmake  FindZMQ.cmake
include/: boost_qlock.h  check.h  printmap.h  profiling.h  threading.h  timing.h
include/phish/: phish-bait.hpp  phish.hpp
scripts/: CLX.cfg  SKX.cfg  get_PAPI_on_Raspi4.sh  jupiter1.cfg  perf_shopping.slurm  tab_shopping.py  try_PMU_on_Raspi4.sh
src/: CMakeLists.txt  boost_qlock.cc  papi.ca72.patch  printmap.cpp  profiling.c  threading.c
src/phish/: phish-bait-common.cpp  phish-bait-zmq.cpp  phish-common.cpp  phish-zmq.cpp
src/pmuenable/: Makefile  pmuenable.c  trypmu.c
