project(VL_uBMK)

cmake_minimum_required(VERSION 2.8)

add_subdirectory(pingpong)
add_subdirectory(fir)
add_subdirectory(shopping)
add_subdirectory(shuffler)
add_subdirectory(max_sce)
add_subdirectory(echo)
add_subdirectory(bitonic)
add_subdirectory(latency)
add_subdirectory(phish)
add_subdirectory(ember)
add_subdirectory(lockhammer)
add_subdirectory(stream)
add_subdirectory(network)
add_subdirectory(search)
add_subdirectory(fluidanimate)
